--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Cool Web Site</title>
-    <link rel="stylesheet" type="text/css" href="css\style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <div id="title"><h1>シンプル 伊豆 ベスト</h1></div>
     <div id="container">
         <div id="side">
             <ul>
@@ -18,9 +19,20 @@
         </div>
         <div id="main">
             <h1>いい感じのタイトル</h1>
-            <p>このページはサンプルです</p>
-            <h2>なるほどこんにちは</h2>
+            <p id="coolText">クールなWEBサイトを目指しています</p>
+            
+            <h2>なるほどこれはいいところですね</h2>
+            <div class="photo">
+                <img src="/img/izu.jpg" alt="富士山が写っています">
+            </div>
+            <div id="myForm">
+                <form>
+                    <textarea id="maybeCoolText" rows="10" cols="40" ></textarea>
+                    <button type="button"  onclick="setText()">君の文章を載せる！</button>
+                </form>
+            </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
