FIX img path IN html
html内の画像のパス修正

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
             <h2>なるほどこれはいいところですね</h2>
             <div class="photo">
-                <img src="/img/izu.jpg" alt="富士山が写っています">
+                <img src="img/izu.jpg" alt="富士山が写っています">
             </div>
             <div id="myForm">
                 <form>
