Modify HTML and CSS(more cool)
サイトの体裁を整えた。

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
             </ul>
         </div>
         <div id="main">
-            <h1>いい感じのタイトル</h1>
-            <p id="coolText">クールなWEBサイトを目指しています</p>
+            <h1>このサイトについて</h1>
+            <p id="coolText">伊豆の写真とともにクールなWEBサイトを目指しています</p>
             
-            <h2>なるほどこれはいいところですね</h2>
+            <h2>美しい自然</h2>
+            <p>いいサイトにはきれいな画像が欠かせないものです。</p>
             <div class="photo">
-                <img src="img/izu.jpg" alt="富士山が写っています">
+                <img src="img/izu.jpg" alt="伊豆からみた富士山が映っています">
             </div>
+            <h2>動的なサイト</h2>
+            <p>このサイトは本当にクールなので、サイトの説明もあなた自身で書き換えることができます。</p>
             <div id="myForm">
                 <form>
                     <textarea id="maybeCoolText" rows="10" cols="40" ></textarea>
