--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>Cool Web Site</title>
@@ -10,24 +10,24 @@
     <div id="container">
         <div id="side">
             <ul>
-                <li>Hello</li>
-                <li>hello html</li>
-                <li>hello css</li>
-                <li>hello python</li>
-                <li>hello javascript</li>
+                <li><a href="destroyBlock.html">ブロック崩し</a></li>
+                <li><a href="tetris.html">テトリス 断念</a></li>
+                <li>example</li>
+                <li>test</li>
+                <li>testest</li>
             </ul>
         </div>
         <div id="main">
             <h1>このサイトについて</h1>
-            <p id="coolText">伊豆の写真とともにクールなWEBサイトを目指しています</p>
-            
+            <p id="coolText">クールなWEBサイトを目指しています</p>
+            <p>サイドメニューにゲームを配置しています</p>
             <h2>美しい自然</h2>
-            <p>いいサイトにはきれいな画像が欠かせないものです。</p>
+            <p>いいサイトにはきれいな画像が欠かせないものです。伊豆の写真です。</p>
             <div class="photo">
                 <img src="img/izu.jpg" alt="伊豆からみた富士山が映っています">
             </div>
             <h2>動的なサイト</h2>
-            <p>このサイトは本当にクールなので、サイトの説明もあなた自身で書き換えることができます。</p>
+            <p>サイトの説明を書き換えることができます。</p>
             <div id="myForm">
                 <form>
                     <textarea id="maybeCoolText" rows="10" cols="40" ></textarea>
