Modify destroyBlock.html -> add target=_blank
Mozillaリンクを別タブで開くように修正

--- a/destroyBlock.html
+++ b/destroyBlock.html
@@ -15,9 +15,9 @@
             <p>マウスもしくは左右方向キーでバーを移動できます。</p>
             <p>ボールを下に落とさないように注意して、すべてのブロックを崩してください。</p>
             <p>注意：ボールとブロックの衝突判定が甘いので、理不尽な判定となることがあります…。</p>
-            <ul><li>参考URL</li>
+            <ul><li>下記チュートリアルを参考に作りました</li>
                 <li><ul>
-                    <li><a href="https://developer.mozilla.org/ja/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript/Create_the_Canvas_and_draw_on_it">MDN</a></li>
+                    <li><a href="https://developer.mozilla.org/ja/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript" target="_blank">MDNのサイト</a></li>
                 </ul></li>
             </ul>
             <p><a href="index.html">ホームに戻る</a></p>
